cambios menores beamer 03 y 04

--- a/2021-1/beamer/C03_md1.tex
+++ b/2021-1/beamer/C03_md1.tex
@@ -136,17 +136,14 @@ $\mathbb{N}$  es llamado el conjunto de  \textit{números naturales}.     \pause
     forma\vskip .4cm 
 
     \setbeamercolor{postit}{fg=black,bg=example text.fg!75!black!10!bg}
-    \begin{beamercolorbox}[wd=1.0\textwidth,rounded=true,shadow=true]{postit}%
-        \begin{center}\textit{\qquad \quad si $X \subset \mathbb N \vee X \subset\mathbb N_0$, no vacío \; $\Rightarrow$ \; $X$ tiene un mínimo.}\vskip .4cm
-\end{center}
+    \hskip 0.8cm\begin{beamercolorbox}[wd=0.75\textwidth,rounded=true,shadow=true]{postit}%
+        \textit{si $X \subset \mathbb N \vee X \subset\mathbb N_0$, no vacío \; $\Rightarrow$ \; $X$ tiene un mínimo.}
 \end{beamercolorbox}
     
 
 \end{itemize}
 
-
 \end{frame}
-
 
 
 \begin{frame}\frametitle{ }  
