Menores en apunte

--- a/2021-1/apunte/Cap.01.tex
+++ b/2021-1/apunte/Cap.01.tex
@@ -651,7 +651,7 @@ para $1 \le n\le 6$. Basándose en su tabla sugiera una fórmula para $S_n$. [Ay
 
 \item Probar que
 $$
-1^4+2^4+\cdots+n^4= \frac{1}{30}n(n+1)(2n+1)(3n^2+3n+1).
+1^4+2^4+\cdots+n^4= \frac{1}{30}n(n+1)(2n+1)(3n^2+3n-1).
 $$
 \item Usar el principio de inducción para probar que $2^n>n+1$ para todo entero $n\ge2$.
 
